Wed Nov  5 14:07:06 2003  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/CCF/CodeGenerationKit/CommandLineGrammar.hpp:
	* CCF/CCF/CodeGenerationKit/CommandLineParser.cpp:

	  Got rid of some warnings.

	* CCF/CCF/IDL2/Parser.hpp:
	* CCF/CCF/IDL2/Parsing/Recovery.hpp:
	* CCF/CCF/IDL2/SyntaxTree/Elements.hpp:

	  Added a work-around to subvert constness of descriptor
          member in spirit::parser_error. Joel de Guzman acknowledged
	  that this is an architectural error but unfortunately it
	  doesn't seem he is going to fix it any time soon (even though
	  patch is available).

Tue Nov  4 21:21:06 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ciao/ComponentsC.h:
	* ciao/ComponentsS.h;

	  Regenerated these files. Not sure why this is maintained in the
	  repo.

	* examples/handcrafted/Hello/hello_executors.h:

	  #include "tao/LocalObject.h"

Tue Nov 04 19:35:10 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* COPYING: Added ACE/TAO/CIAO Copyright disclaimer.  Thanks to
	  Roland Schimmack <SC@ProCom.de> for motivating the change.

Tue Nov  4 17:11:06 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tools/Daemon/CIAO_Daemon.cpp: Fixed warnings from g++.

Tue Nov  4 16:51:22 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tools/Daemon/controller_i.cpp:

	  #included "ace/OS_NS_strings.h"

	* tools/RTComponentServer/RTConfig_Manager.h:
	* tools/ServerActivator/ServerActivator.cpp:
	* tools/XML_Helpers/Assembly_Handlers.cpp:
	* tools/XML_Helpers/RTConfig_Handlers.cpp:
	* tools/XML_Helpers/Softpkg_Handlers.cpp:
	* tools/XML_Helpers/XML_Utils.cpp:

	  #included "ace/OS_String.h" to get the above files compiling
	  with g++. We still get a link error that Don is looking at.

Tue Nov  4 16:34:45 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ciao/Active_Objref_Map.h:
	* ciao/Client_init.h:
	* ciao/Object_Set_T.h:
	* ciao/Server_init.h:

	  Added new includes that are needed to get them compiling.
